--- a/templates/register.html
+++ b/templates/register.html
@@ -192,6 +192,10 @@
         <div class="link">
             Already have an account? <a href="/login">Sign in</a>
         </div>
+
+        <div class="link" style="margin-top: 12px;">
+            <a href="/dev-login">Skip to Developer Login →</a>
+        </div>
     </div>
 
     <script>
