Enhanced Module 3 feature detection and improved all modules

--- a/templates/module1.html
+++ b/templates/module1.html
@@ -21,8 +21,8 @@
                 <strong>Instructions:</strong>
                 <ol style="margin: 8px 0 0 20px; line-height: 1.8;">
                     <li>Upload an image - it will be automatically undistorted</li>
-                    <li><strong>FIRST:</strong> Click 2 points on an object with a known size (e.g., 4-inch square side)</li>
-                    <li>Enter the actual length in "Known Length (inches)"</li>
+                    <li><strong>FIRST:</strong> Click 2 points on an object</li>
+                    <li>Enter the actual length in (inches)"</li>
                     <li>Click <strong>"Calibrate"</strong> to set the scale</li>
                     <li>Now click additional points to measure other distances (up to 4 points total)</li>
                     <li>All measurements will be calculated based on the calibrated scale</li>
