Update author credits

--- a/templates/index.html
+++ b/templates/index.html
@@ -183,7 +183,7 @@
     <div class="container">
         <h1>Computer Vision Project</h1>
         <div class="subtitle">Advanced Real-Time Vision Processing Platform</div>
-        <div class="authors">Mahendra Krishna Koneru | Sai Leenath Jampala</div>
+        <div class="authors">Mahendra Krishna Koneru</div>
         
         <div class="buttons">
             <a href="/register" class="btn btn-primary">Get Started</a>
